# agiletest-cli

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  404.html  CONTRIBUTING.MD  Dockerfile  Makefile  README.md  index.html  mkdocs.yml  pyproject.toml
.github/workflows/: publish-docker-image.yml  update-docs.yml
ci-cd/: index.html
cli/: index.html
contributing/: index.html
docs/: ci-cd.md  cli.md  contributing.md  index.md  support.md
src/agiletest_cli/: __init__.py  agiletest_client.py  cli_commands.py  config.py  main.py  utils.py
support/: index.html
tests/: behave-invalid-test.json  behave-valid-report.json  info.json  junit-test-data.xml  test_commands.sh
